--- a/app/localization/locales/it/translation.json
+++ b/app/localization/locales/it/translation.json
@@ -1,12 +1,12 @@
 {
   "Hello": "Ciao",
   "File": "File",
-  "Exit": "Esci",
-  "Edit": "Modifica",
-  "Undo": "Annulla",
-  "Redo": "Ripeti",
-  "Cut": "Taglia",
-  "Copy": "Copia",
+  "Exit": "Uscita",
+  "Edit": "modificare",
+  "Undo": "Disfare",
+  "Redo": "Rifare",
+  "Cut": "Tagliare",
+  "Copy": "copia",
   "Paste": "Incolla",
   "Delete": "Elimina",
   "Select All": "Seleziona tutto",
@@ -15,14 +15,14 @@
   "Force Reload": "Forza ricarica",
   "Toggle Developer Tools": "Attiva / disattiva strumenti per sviluppatori",
   "Reset Zoom": "Ripristina zoom",
-  "Zoom In": "Zoom avanti",
+  "Zoom In": "Ingrandire",
   "Zoom Out": "Zoom indietro",
   "Toggle Fullscreen": "Passare a schermo intero",
-  "Language": "Lingua",
+  "Language": "linguaggio",
   "Window": "Finestra",
   "Minimize": "Minimizzare",
   "Zoom": "Ingrandisci",
-  "Close": "Chiudi",
+  "Close": "Vicino",
   "Help": "Aiuto",
   "Learn More": "Per saperne di più"
 }
